--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,7 +91,9 @@ button:hover {
   -o-transform: scale(1.1);
 }
 
-.homePageTitle {
+.homePageTitle,
+.notFoundTitle,
+.notFoundDescription {
   max-width: 300px;
   margin-left: auto;
   margin-right: auto;
@@ -103,4 +105,36 @@ button:hover {
   background-clip: text;
   filter: var(--filterShadow);
   -webkit-filter: var(--filterShadow);
+}
+
+.notFoundlinkReturn {
+  max-width: 150px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  background-image: linear-gradient(to right, #603813, #b29f94);
+  filter: var(--filterShadow);
+  -webkit-filter: var(--filterShadow);
+  margin-top: 25px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  transition: transform .4s;
+  -webkit-transition: transform .4s;
+  -moz-transition: transform .4s;
+  -ms-transition: transform .4s;
+  -o-transition: transform .4s;
+}
+
+.notFoundlinkReturn:hover {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
 }
